Fix nav links wrapping

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -24,6 +24,7 @@ ul {
   flex-direction: row;
   gap: 8px;
   align-self: center;
+  flex-wrap: wrap;
 }
 
 ul > li:nth-child(-n+2) {
